# high-performance-computing

mini1/: .gitignore  CMakeLists.txt  README.md  Report.md  build_project.sh  requirements.txt
mini1/src/airnow-detailed/: parallel.cpp  parallel.py  serial.cpp  serial.py
mini1/src/c++/airnow/: airnow-parallel.cpp  airnow-serial.cpp
mini1/src/c++/nyc/: nyc-parallel.cpp  nyc-serial.cpp
mini1/src/c++/world-bank/: worldbank-parallel.cpp  worldbank-serial.cpp
mini1/src/python/airnow/: P_numpy_pandas_version.py  S_AoO.py  S_OoA.py  S_and_P_threading.py
mini1/src/python/nyc/: P_multiprocessing_Version.py  P_threading_Version.py  S_AoO.py  S_OoA.py  Serial_Version.py
mini1/src/python/nyc/color-analysis/: serialcode.py
mini1/src/python/nyc/failedVersions/: S_numba.py
mini1/src/python/world-bank/: P_numpy_pandas_version.py  P_threading_AoO.py  P_threading_OoA.py  S_AoO.py  S_OoA.py  S_numpy_pandas_version.py  tempCodeRunnerFile.py  test.py
mini1/src/python/world-bank/Failed_Versions/: S_OoA_numba.py
mini2/: Solution.java  build_project.sh  main.py  pyproject.toml  requirements.txt  ring_run_client.py  ring_run_server.py  setup.sh  star_run_client.py  star_run_server.py
mini2/src/process/: ArrayOfObjects.py  ObjectOfArrays.py
mini2/src/ring/grpc/: central_hub.py  client.py  ring.proto  server.py
mini2/src/ring/rest/: central_hub.py  client.py  server.py
mini2/src/star/grpc/: central_hub.py  client.py  server.py  star_service.proto
mini2/src/star/rest/: central_hub.py  client.py  server.py
mini2/src/trials/: file_transfer.proto  grpc_client.py  grpc_server.py  rest_client.py  rest_server.py
mini2/src/utilities/: hub_functions.py  modes.py
mini3/: .gitignore  automate_run.py  pyproject.toml  requirements.txt  run_client.py  run_server.py  setup.sh
mini3/src/: client.py  server.py
mini3/src/utilities/: colors.py  modes.py  print_prefix.py
