[project]
name = "mini2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Nikhath Firdose", email = "nikhath.firdose@sjsu.edu" },
    { name = "Veera Vivek Telagani", email = "veeravivek.telagani@sjsu.edu"},
    { name = "Vamshi Raj Nagula", email = "vamshiraj.nagula@sjsu.edu"},
    { name = "Soumith Reddy Podduturi", email = "soumithreddy.podduturi@sjsu.edu" },
]
dependencies = [
    "blinker==1.9.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "flask==3.1.0",
    "grpcio-tools==1.68.0",
    "grpcio==1.68.0",
    "idna==3.10",
    "importlib-metadata==8.5.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "markupsafe==3.0.2",
    "protobuf==5.29.0",
    "requests==2.32.3",
    "urllib3==1.26.20",
    "werkzeug==3.1.3",
    "zipp==3.21.0",
]

[tool.setuptools]
packages = ["src"]
